--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
+    "generate:github": "NUXT_APP_BASE_URL=flowchart-ssg-sample nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
