--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "generate:github": "NUXT_APP_BASE_URL=/flowchart-ssg-sample/  nuxt generate",
+    "build": "nuxi build",
+    "dev": "nuxi dev",
+    "generate": "nuxi generate",
+    "generate:github": "NUXT_APP_BASE_URL=/flowchart-ssg-sample/  nuxi generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
